# lib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  stack.yaml  weave.cabal
app/: CLI.hs  Main.hs
fonts/: fonts
images/: 1.raw  9.raw  proj.kra  proj.kra~
scripts/: 1.py  dataset_gen.py  digit_gen.py
src/Weave/: Base.hs  Dataset.hs  IO.hs  Train.hs
