cabal-version:      3.14
name:               weave
version:            0.1.0.0
description:        ML lib 
homepage:           https://github.com/WeaveML/lib.git
license:            MIT
license-file:       LICENSE
author:             ruzen42
maintainer:         malledeferlive@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      Weave.Base,
      Weave.Train,
      Weave.Dataset,
      Weave.IO

    build-depends:    
      base ^>=4.20.2.0,
      random,
      binary

    hs-source-dirs:   src
    default-language: GHC2024

executable weave-image 
    import:           warnings
    main-is:          Main.hs
    other-modules:  CLI
    build-depends:
        base ^>=4.20.2.0,
        random,
        weave,
        bytestring,
        optparse-applicative,
        binary

    hs-source-dirs:   app
    default-language: GHC2024
